@startuml
!include ../../StylesForDiagrams.puml

title EXPECTATION AND REALITY \n Branch: package_by_layer
package app as "com.vanskarner.cleanmovie.ui"{
    class FavoritesPresenter
}
package domain as "com.vanskarner.domain"{
    interface MovieServices<<interface>>
    class MovieDefaultServices classNotVisible
    interface MovieLocalRepository<<interface>>
    class FindFavoriteMovieUseCase classNotVisible

    MovieServices <|.. MovieDefaultServices
    MovieDefaultServices --> FindFavoriteMovieUseCase
    FindFavoriteMovieUseCase --> MovieLocalRepository
}
package localData as "com.vanskarner.localdata"{
    class MovieLocalRxRepository classNotVisible
}

FavoritesPresenter ..> MovieServices: <<use>>
MovieLocalRepository <|.. MovieLocalRxRepository

skinparam titleFontColor green
hide members
@enduml
